phase 4 impl final
